update backend url

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
       crossorigin="anonymous"
     ></script>
     <script>
-      let socket = io.connect("http://localhost:3500");
+      let socket = io.connect("https://sketchboard-owjs.onrender.com");
     </script>
     <script src="./tools.js"></script>
     <script src="./canvas.js"></script>
